# Qt_Components

Qt_CMake_Demo/: CMakeLists.txt  demo_main.cpp
Qt_Components/: CMakeLists.txt  component_main.cpp
Qt_Components/qt_resources/: resource.qrc
